--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-types": "npx supabase gen types typescript --project-id jxocshnzpuwfercgsxcw --schema public > types_db.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.1.10",
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.2",
     "@tanstack/react-query": "^5.62.3",
     "next": "14.2.14",
