--- a/dropbox-clone/package.json
+++ b/dropbox-clone/package.json
@@ -20,7 +20,8 @@
     "@tanstack/react-query": "^5.62.3",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
