--- a/netfliex-clone/package.json
+++ b/netfliex-clone/package.json
@@ -21,7 +21,8 @@
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.5"
+    "react-dropzone": "^14.3.5",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
