--- a/netfliex-clone/package.json
+++ b/netfliex-clone/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-intersection-observer": "^9.13.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
